Use List.of().