@@ -17,7 +17,6 @@ import org.schabi.newpipe.extractor.ServiceList;
 import org.schabi.newpipe.extractor.services.peertube.PeertubeInstance;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public final class PeertubeHelper {
@@ -29,7 +28,7 @@ public final class PeertubeHelper {
         final String savedInstanceListKey = context.getString(R.string.peertube_instance_list_key);
         final String savedJson = sharedPreferences.getString(savedInstanceListKey, null);
         if (null == savedJson) {
-            return Collections.singletonList(getCurrentInstance());
+            return List.of(getCurrentInstance());
         }
 
         try {
@@ -45,9 +44,8 @@ public final class PeertubeHelper {
             }
             return result;
         } catch (final JsonParserException e) {
-            return Collections.singletonList(getCurrentInstance());
+            return List.of(getCurrentInstance());
         }
-
     }
 
     public static PeertubeInstance selectInstance(final PeertubeInstance instance,
